--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
 			<div class="nav-links">
 				<ul>
 					<li><a href="#">Home</a></li>
-					<li><a href="#">Mobile/Ipad/Macbook</a></li>
+					<div class="dropdown">
+						<li><a href="#" id="moh">Mobile/Ipad/Macbook</a></li>
+						<div class="dropdown-content">
+							<a href="https://www.apple.com/in/shop/buy-iphone" target="_blank">Mobiles</a>
+							<a href="https://www.apple.com/in/ipad/" target="_blank">Ipads</a>
+							<a href="https://www.apple.com/in/mac/" target="_blank">Macbooks</a>
+						</div>
+					</div>
 					<li><a href="#">Cart</a></li>
 				</ul>
 			</div>
