--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<a href="https://www.apple.com/in/" target="_blank">
 					<img src="images/apple logo.jpg" width="75" height="75">
 				</a>
-				<p style="margin-left: 15px; color: black;"> Apple <br> Product</p>
+				<p style="margin-left: 15px; color: black;"> Apple <br> Products</p>
 			</div>
 			<div class="nav-links">
 				<ul>
@@ -76,8 +76,8 @@
 					<div>
 						<h1>Battery</h1>
 						<p>2,815mAh battery</p>
-						<p>Video Playback:17hrs</p>
-						<p>Audio Playback:65hrs</p>
+						<p>Video Playback=17hrs</p>
+						<p>Audio Playback=65hrs</p>
 					</div>
 				</div>
 			</div>
